--- a/src/styles/Etape.css
+++ b/src/styles/Etape.css
@@ -3,3 +3,21 @@
   margin-left: 10px;
   margin-top: 25px;
 }
+
+/*-----> Etape2 <------*/
+.formNat {
+  position: relative;
+  width: 20rem;
+  margin-top: 45px;
+}
+.formSelecte {
+  position: relative;
+  width: 20rem;
+  margin-top: 15px;
+}
+
+.formInput {
+  position: relative;
+  width: 20rem;
+  margin-top: 70px;
+}
